Texture painting fails with different float image working space #39704

Closed
opened 2014-04-13 20:02:07 +02:00 by Antonis Ryakiotakis · 7 comments

System Information
Ubuntu 13.10 64 bit, Geforce 540M GT, 8 GB RAM

Blender Version
5d79c26

Short description of error
Changing the working space of float images makes painting dysfunctional

Exact steps for others to reproduce the error

  • Download the contents of https://github.com/sobotka/psyfiTestingConfig
  • Substitute the OCIO configuration from usr/local/share/blender/2.70/datafiles/colormanagement
  • Open the marcie-whacked.exr file from the above repository in the image editor.
  • Go to paint mode.
  • Try painting with a color. Painted color is different than the one in the color picker.

This is because we do not transform the brush color (which is hardcoded converted to scene linear) to the image color space, or vice versa.
Correct blending though is only possible in linear spaces, and since image space could be arbitrary, solution should be to convert such an image to a linear representation probably.
Or we could assume a linear space and transform brush color to image space.
This begs for trouble though.

**System Information** Ubuntu 13.10 64 bit, Geforce 540M GT, 8 GB RAM **Blender Version** 5d79c26 **Short description of error** Changing the working space of float images makes painting dysfunctional **Exact steps for others to reproduce the error** * Download the contents of https://github.com/sobotka/psyfiTestingConfig * Substitute the OCIO configuration from usr/local/share/blender/2.70/datafiles/colormanagement * Open the marcie-whacked.exr file from the above repository in the image editor. * Go to paint mode. * Try painting with a color. Painted color is different than the one in the color picker. This is because we do not transform the brush color (which is hardcoded converted to scene linear) to the image color space, or vice versa. Correct blending though is only possible in linear spaces, and since image space could be arbitrary, solution should be to convert such an image to a linear representation probably. Or we could assume a linear space and transform brush color to image space. This begs for trouble though.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Antonis Ryakiotakis 2014-04-13 20:02:07 +02:00
Author
Member

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi
Author
Member

You can see other errors with this file. For instance try to sample the image with eyedropper (E over color).

Essentially, we assume that gamma properties are in display space always. This is not a valid assumption if user has a calibrated display. We will often skip color correction altogether while colors need to be converted to the calibrated display. Color wheel sure suffers from this and I will tackle it next week.

You can see other errors with this file. For instance try to sample the image with eyedropper (E over color). Essentially, we assume that gamma properties are in display space always. This is not a valid assumption if user has a calibrated display. We will often skip color correction altogether while colors need to be converted to the calibrated display. Color wheel sure suffers from this and I will tackle it next week.

This issue was referenced by blender/blender-addons-contrib@e6ff0ec73d

This issue was referenced by blender/blender-addons-contrib@e6ff0ec73da5fa82873ea75f4915b7cf8410c454

This issue was referenced by e6ff0ec73d

This issue was referenced by e6ff0ec73da5fa82873ea75f4915b7cf8410c454

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e6ff0ec73d.

Closed by commit e6ff0ec73d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39704
No description provided.